--- a/lab/notebooks/Containers.ipynb
+++ b/lab/notebooks/Containers.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "166916c6",
    "metadata": {
     "vscode": {
@@ -248,16 +248,13 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FROM nginx:mainline-alpine\n",
-      "RUN rm /etc/nginx/conf.d/*\n",
-      "ADD hello.conf /etc/nginx/conf.d/\n",
-      "ADD index.html /usr/share/nginx/html/\n",
-      "\n",
-      "# solution 1\n",
-      "# ADD images/image.png /usr/share/nginx/html/images/image.png"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31m'_xsrf' argument missing from POST. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -821,9 +818,16 @@
     "\n",
     "You may have noticed that the static website's image is missing. Your task is to fix this, document the steps you've taken and answer some questions.\n",
     "+ First look into \"index.html\" and find where the image tag source path. Also you need to read __[here](https://docs.nginx.com/nginx/admin-guide/web-server/serving-static-content/)__ how static serving works and have a look in \"hello.conf\".\n",
-    "+ When you discover where in the container you need to put the image you need to actually get it there. There are two ways to do this and you can chose either one of them to solve the problem. It is recommended to solve this assignment on your host operating system, not in the container we set up, due to a \"problem\" with one of the methods that you might encounter. If you figure out what this problem is you can describe it.\n",
+    "+ When you discover where in the container you need to put the image you need to actually get it there. There are two ways to do this and you can chose either one of them to solve the problem. It is recommended to solve this assignment on your host operating system, not in the container we set up.\n",
     "+ Answer why one method is preferable over the other (what are the advantages)."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4e234b18",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
