--- a/lab/notebooks/Containers.ipynb
+++ b/lab/notebooks/Containers.ipynb
@@ -818,7 +818,7 @@
     "\n",
     "You may have noticed that the static website's image is missing. Your task is to fix this, document the steps you've taken and answer some questions.\n",
     "+ First look into \"index.html\" and find where the image tag source path. Also you need to read __[here](https://docs.nginx.com/nginx/admin-guide/web-server/serving-static-content/)__ how static serving works and have a look in \"hello.conf\".\n",
-    "+ When you discover where in the container you need to put the image you need to actually get it there. There are two ways to do this and you can chose either one of them to solve the problem. It is recommended to solve this assignment on your host operating system, not in the container we set up.\n",
+    "+ After you discover the container path where you need to put the image you have to actually put it there. There are at least two ways to do this and you can chose either one to solve the problem. It is highly recommended to solve this assignment on your host operating system, not in the container we set up for the notebook server.\n",
     "+ Answer why one method is preferable over the other (what are the advantages)."
    ]
   },
