--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -116,8 +116,8 @@
    "source": [
     "WTF is this following line doing?\n",
     "\n",
-    "Homework 1: Explain each part of this one-liner bash script.\n"
-    "The first part makes a tar archive and '-' tells us that we want to pass the archive to the stdout, which"
+    "Homework 1: Explain each part of this one-liner bash script.\n",
+    "The first part makes a tar archive and '-' tells us that we want to pass the archive to the stdout, which",
     " helps because we will pass it through the pipe. -P also tells it to maintain the absolute path."
    ]
   },
