--- a/lab/notebooks/Containers.ipynb
+++ b/lab/notebooks/Containers.ipynb
@@ -827,7 +827,11 @@
    "cell_type": "markdown",
    "id": "4e234b18",
    "metadata": {},
-   "source": []
+   "source": [
+    "Practic in html vedem ca se cauta imaginea 'images/image.png'. In fisierul conf serverul cand o sa vrea sa acceseze poza (care in teorie se afla la /usr/share/nginx/html/images/image.png) se foloseste de blocul location /images/ (practic cand nginx cauta /images/image.png, o sa intre pe location /images/ si vede image.png - care are calea absoluta root/images/image.png - si o da mai departe daca exista sau nu - daca nu intoarce 404 error). \n",
+    "\n",
+    "Cum serverul nu vede poza, putem sa intram pe container folosind docker exec -it $container_id /bin/sh care basically ruleaza shell pe container si putem vedea continutul /usr/share/nginx/html. Vedem ca nu exista /images/image.png, deci inseamna ca imaginea cu care am dat build la container nu a adaugat si acest director. In Dockerfile observam ca au fost adaugate doar hello.conf si html-ul; putem copia directorul images folosing atat ADD cat si COPY. Am folosit ADD mai mult din cauza ca restul fisierelor au fost adaugate tot cu ADD :)) (consistency points+), dar in esenta ADD si COPY sunt cam acelasi lucru, diferenta e ca ADD poate avea ca sursa si un URL + extragere de arhive tar. Teoretic pentru copiere de fisierele locale in containere ar fi suficient doar COPY. "
+   ]
   }
  ],
  "metadata": {
