--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "tar cf - archive -P = creeaza(c) o arhiva cu fisierul 'archive' + pastreaza calea absoluta a lui 'archive'(P) + '-' redirecteaza catre stdout\n",
+    "tar cf - archive -P = creeaza(c) o arhiva 'archive' + pastreaza calea absoluta(P) + '-' redirecteaza catre stdout\n",
     "\n",
     "du -sb archive | awk '{print $1}' = prima parte afiseaza dimensiunea lui archive (fara dim subdirectoarelor + size in bytes) ca |size archive| iar\n",
     "                                    awk printeaza prima coloana (adica size)\n",
