--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -146,10 +146,7 @@
     "\n",
     "gzip = creeaza o arhiva .gz\n",
     "\n",
-    "Practic se face o arhiva tar cu fisierul 'archive' care este trimis pe un pipe unde se monitorizeaza progresul arhivarii iar la final se arhiveaza cu gzip si se redirecteaza catre 'lab3.tar.gz'.\n",
-    "\n",
-    "Output-ul comenzii:\n",
-    "10.0KiB 0:00:00 [ 232MiB/s] [=========================================================================================================================] 100000% "
+    "Practic se face o arhiva tar cu fisierul 'archive' care este trimis pe un pipe unde se monitorizeaza progresul arhivarii iar la final se arhiveaza cu gzip si se redirecteaza catre 'lab3.tar.gz'.\n"
    ]
   },
   {
