--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "gzip = creeaza o arhiva .gz\n",
     "\n",
-    "Practic se face o arhiva tar cu fisierul 'archive' care este trimis pe un pipe unde se monitorizeaza progresul arhivarii iar la final se arhiveaza cu gzip si se redirecteaza catre 'lab3.tar.gz'.\n"
+    "Practic se face o arhiva tar 'archive' care este trimis pe un pipe unde se monitorizeaza progresul arhivarii iar la final se arhiveaza cu gzip si se redirecteaza catre 'lab3.tar.gz'.\n"
    ]
   },
   {
