Added explanation for the difference between the files.

--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -168,7 +168,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Answer:\n",
+    "The file ```lab3.tar.gz``` is a compressed tar archive. Both ```.zip``` and ```.tar.gz``` are compressed archives. A difference between the two is that a ```.tar.gz``` archive compresses across all files, whereas a ```.zip``` archive compresses files independently and then concatenates the results. So the ```.zip``` file supports decompressing individual files in the archive, whereas we cannot access any files in the ```tar.gz``` archive without decompressing the whole archive. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What's the difference between a `.tar` file and a `.tar.gz` one?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Answer:\n",
+    "\n",
+    "The ```.tar.gz``` file is just a compressed ```.tar``` archive."
    ]
   },
   {
