--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,7 +21,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,7 +82,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,7 +107,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,7 +129,29 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Homework 1:\n",
+    "# tar = an archiving utility\n",
+    "# cf: c = create a new archive, f = for the archive's name\n",
+    "# - = specifies that the contents of the archive should be displayed on the standard output\n",
+    "# archive = the name of the archive\n",
+    "# -P = don't strip leading slashes from file names when creating the archive\n",
+    "# | = pipe operator used to redirect the output - takes output from one command and uses it as input for another \n",
+    "# pv = monitoring of data being sent through pipe\n",
+    "# -s = assume the total amount of data to be transferred is SIZE bytes when calculating percentages and ETAs\n",
+    "# $(du -sb archive | awk '{print $1}') = obtain the size in bytes of the archive \n",
+    "    #du - estimate file space usage\n",
+    "    #sb - summarize disk usage of each file\n",
+    "    #awk - pattern and scanning programming language\n",
+    "# gzip = compress the archive into the gzip format\n",
+    "# gzip > lab3.tar.gz = redirecting the output of the gzip compression to the lab3.tar.gz file"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -141,7 +159,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -164,7 +181,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -172,7 +188,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -180,7 +195,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -188,7 +202,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -196,7 +209,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -204,15 +216,22 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.6.8"
-  },
-  "orig_nbformat": 4
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
