--- a/lab/notebooks/Containers.ipynb
+++ b/lab/notebooks/Containers.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "lesbian-citation",
    "metadata": {},
@@ -75,7 +74,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bright-distinction",
    "metadata": {},
@@ -139,7 +137,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "injured-costs",
    "metadata": {},
@@ -171,7 +168,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "crucial-sauce",
    "metadata": {},
@@ -205,7 +201,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "handmade-andorra",
    "metadata": {},
@@ -220,7 +215,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "biblical-sheet",
    "metadata": {},
@@ -239,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "166916c6",
    "metadata": {
     "vscode": {
@@ -248,13 +242,10 @@
    },
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31m'_xsrf' argument missing from POST. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat: Dockerfile: No such file or directory\r\n"
      ]
     }
    ],
@@ -263,7 +254,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5910e51e",
    "metadata": {},
@@ -402,7 +392,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a87c3586",
    "metadata": {},
@@ -443,7 +432,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f4eea85a",
    "metadata": {},
@@ -454,7 +442,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1a7a111d",
    "metadata": {},
@@ -490,7 +477,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ac993ac3",
    "metadata": {},
@@ -575,7 +561,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5e249829",
    "metadata": {},
@@ -633,7 +618,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0fb8ef4b",
    "metadata": {},
@@ -809,7 +793,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "08372aab",
    "metadata": {},
@@ -823,24 +806,40 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4e234b18",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Solution\n",
+    "\n",
+    "Looking at the file ```hello.conf``` we can deduce that for urls that begin with ```/images```, nginx uses\n",
+    "the folder ```/usr/share/nginx/html/images```. Therefore, we need to copy the ```images``` folder to\n",
+    "```/usr/share/nginx/html```.\n",
+    "\n",
+    "One way of doing this is by copying the directory directly into the running container's filesystem. We use\n",
+    "the command <br> ```podman cp images/ $CONTAINER_ID:/usr/share/nginx/html``` to achieve this. Unfortunately, if we delete the container and create another one, the original filesystem will be lost, so we will have to do this again.\n",
+    "\n",
+    "A better way is by modifying the Dockerfile. We add the line ```ADD images /usr/share/nginx/html/images``` at the end of the file. That way, the docker image will contain the correct configuration."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "shell",
-   "file_extension": ".sh",
-   "mimetype": "text/x-sh",
-   "name": "bash"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
