--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -113,6 +113,12 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "WTF is this following line doing?\n",
     "\n",
@@ -137,6 +143,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In the first part of this one-liner bash script we create a tar archive named \"archive\". We use the option \"-c\" for creating a new archive and the option \"-f\" to specify that the archive will be written on the standard output (stdout) and not on a file from disk. We use the option \"-P\" to include the absolute path of the files we want to include in the archive. \n",
+    "\"|\" is a pipe operator that ensure the transmission of output between commands. \n",
+    "So, we take the output from tar and redirect it to \"pv\" which is used for display the progress of data transfer through the pipe. The \"pv\" receives the expected size of the data from the \"-s\" option. \"du\" calculates the size of archive, which is the director specified and the option \"-b\" displays the size in bytes. \"awk\"  is used to process text files and \"{print $1}\" prints the first column of each line. In other words it will be displayed a progress bar which shows the amount of data transferred so far relative to the total size of the data. \n",
+    "In the last part of the one-liner bash script we use \"gzip\" to compress the data received through the pipe operator \"|\". We use the \">\" operator to redirect the output of the previous command to a file named lab3.tar.gz. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What type of file is `lab3.tar.gz`? What's the difference from `lab3.zip`?"
    ]
   },
@@ -147,6 +164,12 @@
    "source": [
     "What's the difference between a `.tar` file and a `.tar.gz` one?"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
