--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -133,6 +133,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Homework solution:\n",
+    "\n",
+    "The command creates a compressed archive (lab3.tar.gz) of a directory called archive\n",
+    "\n",
+    "We can split it in 3 sections:\n",
+    "\n",
+    "1. tar cf - archive -P\n",
+    "    This part creates a tar archive (tar) of the archive directory. \n",
+    "    The -c option means \"create,\" and the -f option is used to specify the file name or path of\n",
+    "    the output tar archive. When the hyphen - is used as the argument for the -f option, it indicates that the \n",
+    "    archive should be written to stdout instead of a specific file.\n",
+    "    The -P option preserves the absolute path of the files being archived. \n",
+    "    Without this option, the paths within the archive would be relative to the current working directory.\n",
+    "\n",
+    "2.pv -s $(du -sb archive | awk '{print $1}')\n",
+    "      This part uses pv (pipe viewer) to monitor the progress of the data transfer.\n",
+    "      It shows a progress bar and other information. The -s option is used to specify the total size\n",
+    "      of the data being transferred. The command du -sb archive | awk '{print $1}' calculates the size of \n",
+    "      the archive directory in bytes (du -sb archive) and extracts the size value (awk '{print $1}')\n",
+    "\n",
+    "3.gzip > lab3.tar.gz\n",
+    "      This command is used to compress the input data received from the previous command in the pipeline. The > symbol \n",
+    "      is a redirection operator that directs the compressed output from gzip to a file named lab3.tar.gz.\n",
+    "      When gzip compresses a file, it replaces the original file with a compressed version and appends the .gz extension to the \n",
+    "      filename. The resulting file has a smaller size compared to the original."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -194,12 +231,6 @@
    "source": [
     "How do I find all files containing the `haystack` string recursively starting from the current folder?"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -210,7 +241,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.6.8"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
