Second task done

--- a/lab/notebooks/Containers.ipynb
+++ b/lab/notebooks/Containers.ipynb
@@ -827,7 +827,13 @@
    "cell_type": "markdown",
    "id": "4e234b18",
    "metadata": {},
-   "source": []
+   "source": [
+    "Cele 2 metode sunt:\n",
+    "1. Modificam Dockerfile astfel incat imaginea de docker sa creeze containere cu tot cu images/image.png.\n",
+    "2. Copiam direct folder-ul images in container-ul running.\n",
+    "\n",
+    "Preferam prima metoda, deoarece din build-uri ulterioare din aceeasi imagine vor rezulta containere care nu il vor contine si va trebui sa facem de fiecare data copierea de mana."
+   ]
   }
  ],
  "metadata": {
