--- a/lab/notebooks/Containers.ipynb
+++ b/lab/notebooks/Containers.ipynb
@@ -825,6 +825,34 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "7bb36e29",
+   "metadata": {},
+   "source": [
+    "Solution:\n",
+    "+ The first method is to copy the folder \"images\" into the running container. \n",
+    "    First step is to build the image: docker build -t nginx-static:latest .\n",
+    "    Second step run the container: docker run -p 8081:80 -d nginx-static\n",
+    "    Third step is to take the id of the docker (it will be displayed after the running) and replace the containerid in the command: docker cp images/ $CONTAINER_ID:/usr/share/nginx/html which copy the content of \"images\" into the /usr/share/nginx/html of the container.\n",
+    "\n",
+    "    This approach is only a temporary solution because if the container is deleted or recreated the change will be lost. \n",
+    "\n",
+    "\n",
+    "+ A second methos is to modify the Dockerfile, including the line ADD images /usr/share/nginx/html/images for the purpose of copying into the container's image during the build process. \n",
+    "    First step is to stop the running container from the past, rebuild and rerun the container. \n",
+    "\n",
+    "    This is a more efficient method than the previous one but it increases the image's size and it limites the flexibility of the folder \"images\" because changing the content of the folder requires rebuilding the entire Docker image.\n",
+    "\n",
+    "+ A third methos is to use a volume mount, the flag \"-v\". \n",
+    "    First step is to stop the running container from the past and rebuild the container. \n",
+    "    Second step is to run the container using the command: sudo docker run -p 8081:80 -v /home/anastasia/Documents/Linux-Podman-basics/lab/playground/containers/images:/usr/share/nginx/html/images -d nginx-static  We use the path to the directory we want to make available for container and the path for the destination directory within the container, where the folder \"images\" should be mounted.\n",
+    "    \n",
+    "    This is a more efficient method than the first and the second one because it reduces image's size and it allows for dynamic updates the \"images\" folder without rebuilding the entire Docker image.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "4e234b18",
    "metadata": {},
    "source": []
