--- a/lab/notebooks/Containers.ipynb
+++ b/lab/notebooks/Containers.ipynb
@@ -827,7 +827,19 @@
    "cell_type": "markdown",
    "id": "4e234b18",
    "metadata": {},
-   "source": []
+   "source": [
+    "In cadrul fisierului index.html path-ul folosit pentru imaginea ce urmeaza sa fie afisata este /images/image.png.\n",
+    "In momentul in care serverul ruleaza, path-ul dorit nu este gasit deoarece in in fisierul hello.conf \n",
+    "location /images este gol.\n",
+    "Pentru a rezolva problema am folosind in cadrul fisierului dockerfile comanda de ADD pentru a \n",
+    "adauga folderul images in cadrul imaginii. De asemenea am adaugat si in fisierul hello.conf\n",
+    "pentru location /images path-ul catre usr/share/nginx/html folosind alias pentru a corespunde cu\n",
+    "cel din fisierul dockerfile.\n",
+    "Am observat ca pot rezolva aceasta problema adaugand comanda COPY in fisierul dockerfile\n",
+    "pentru a copia folderul images. Intre cele doua nu exista diferente majore, am folosit ADD\n",
+    "pentru a pastra consistenta. Comanda ADD prezinta un avantaj deoarece poate fi folosita\n",
+    "si cu un URL sau o arhiva."
+   ]
   }
  ],
  "metadata": {
