--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -137,6 +137,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "tar cf - archive -P | pv -s $(du -sb archive | awk '{print $1}') | gzip > lab3.tar.gz\n",
+    "\n",
+    "tar cf - archive -P\n",
+    "\n",
+    "Comanda de mai sus creeaza o arhiva necomprimata folosind utilitarul tar\n",
+    "c este un flag folosit pentru creare de arhiva \n",
+    "f este folosit pentru numele arhivei care urmeaza in partea dreapta\n",
+    "- este folosit pentru a specifica faptul ca arhiva va fi scrisa \n",
+    "la iesirea standard\n",
+    "-P este folosit pentru a pastra caile absolute in arhiva\n",
+    "\n",
+    "pv -s $(du -sb archive | awk '{print $1}') \n",
+    "\n",
+    "Comanda de mai sus foloseste utilitarul pv \n",
+    "care afiseaza progresul de arhivare.\n",
+    "-du calculeaza dimensiunea directorului archive\n",
+    "awk 'print $1' extrage dimensiunea in bytes din calculul precedent\n",
+    "Intreaga comanda afiseaza dimensiunea totala a arhivei si progresul\n",
+    "\n",
+    "gzip > lab3.tar.gz\n",
+    "\n",
+    "Comanda de mai sus redirecteaza arhiva comprimata in fisierul lab3.tar.gz\n",
+    "\n",
+    "Spre deosebire de fisierul lab3.tar care contine doar fisierele unite\n",
+    "arhiva lab3.tar.gz contine si o comprimare a acestora"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What type of file is `lab3.tar.gz`? What's the difference from `lab3.zip`?"
    ]
   },
