--- a/lab/notebooks/Containers.ipynb
+++ b/lab/notebooks/Containers.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "lesbian-citation",
    "metadata": {},
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "proof-principal",
    "metadata": {
     "vscode": {
@@ -75,7 +74,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bright-distinction",
    "metadata": {},
@@ -139,7 +137,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "injured-costs",
    "metadata": {},
@@ -171,7 +168,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "crucial-sauce",
    "metadata": {},
@@ -205,7 +201,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "handmade-andorra",
    "metadata": {},
@@ -220,7 +215,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "biblical-sheet",
    "metadata": {},
@@ -263,7 +257,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5910e51e",
    "metadata": {},
@@ -402,7 +395,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a87c3586",
    "metadata": {},
@@ -443,7 +435,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f4eea85a",
    "metadata": {},
@@ -454,7 +445,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1a7a111d",
    "metadata": {},
@@ -490,7 +480,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ac993ac3",
    "metadata": {},
@@ -575,7 +564,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5e249829",
    "metadata": {},
@@ -633,7 +621,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0fb8ef4b",
    "metadata": {},
@@ -809,7 +796,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "08372aab",
    "metadata": {},
@@ -823,7 +809,22 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24a67c14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Homework:\n",
+    "# After having a look in \"hello.conf\", I decided to add the following line: \"/usr/share/nginx/html/images/\" \n",
+    "# in the location /images/ { } section\n",
+    "# I have discovered two methods for placing the imagine where it needed to be: \n",
+    "    # method 1 - by using the docker cp command \n",
+    "    # method 2 - by manually copying the image \n",
+    "# Method 1 is faster and easier to use and doesn't involve modifying the file system on your machine"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4e234b18",
    "metadata": {},
@@ -832,15 +833,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "shell",
-   "file_extension": ".sh",
-   "mimetype": "text/x-sh",
-   "name": "bash"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
