--- a/lab/notebooks/Containers.ipynb
+++ b/lab/notebooks/Containers.ipynb
@@ -827,7 +827,11 @@
    "cell_type": "markdown",
    "id": "4e234b18",
    "metadata": {},
-   "source": []
+   "source": [
+    "Solution:\n",
+    "\n",
+    "Cele doua metode pe care le-as putea folosi pentru a adauga logo-ul in imaginea container-ului sunt fie folosind instructiunea ADD in Dockerfile inainte de a buildui imaginea container-ului, fie cu comanda docker cp in terminal cat timp containerul ruleaza. Varianta cu docker cp nu este o varianta ideala pentru automatizare sau cazuri in care sunt necesare actualizari frecvente, asa ca am ales sa folosesc varianta cu ADD, fiind o modalitate care nu necesita interventie manuala pentru a copia imaginea in container."
+   ]
   }
  ],
  "metadata": {
