--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -137,6 +137,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Solution:\n",
+    "\n",
+    "`tar cf - archive -P` creeaza o arhiva tar pentru directorul \"archive\". Flag-ul `c` indica faptul ca se creeaza o arhiva noua, iar  `f -` specifica ca output-ul trebuie trimis catre stdout. Flag-ul `-P` este utilizat pentru a pastra caile absolute ale fisierelor in timpul arhivarii.\n",
+    "\n",
+    "`du -sb archive` calculeaza dimensiunea totala a directorului “archive”. Flag-ul `-b` specifica ca dimensiunea sa fie afisata in bytes, iar `-s` specifica sa fie afisata doar dimensiunea totala (sumarizare). Output-ul comenzii este dat ca input catre `awk '{print $1}' ` care este utilizat pentru a extrage si afisa primul camp, folosind spatiul ca delimitator implicit. In cazul dat, rezultatul comenzii va fi valoarea dimensiunii in bytes a folder-ului archive.\n",
+    "\n",
+    "`pv -s $(du -sb archive | awk '{print $1}’)` afiseaza progresul transferului de date intre tar si gzip, specificand dimensiunea totala a datelor care urmeaza sa fie transferate\n",
+    "\n",
+    "`gzip > lab3.tar.gz` comprima arhiva si redirectioneaza outupul in fisierul  lab3.tar.gz.\n",
+    "\n",
+    "Rezultatul final al comenzii va fi arhiva tar comprimata `lab3.tar.gz`, iar in terminal vor fi afisate informatii despre progresul transferului de date."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What type of file is `lab3.tar.gz`? What's the difference from `lab3.zip`?"
    ]
   },
