--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,7 +21,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,7 +82,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,7 +107,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,7 +129,30 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- tar este o comanda de arhivat, \"c\" ne spune ca urmeaza sa se creeze o arhiva iar \"f\" va indica numele arhivei, \"-archive\" este numele cum se va numi arhiva, iar optiunea \"-P\" pastreaza numele absolute. \n",
+    "\n",
+    "- comanda du este folosita pentru a calcula spatiul ocupat de fisiere, \"s\" se spune ca vream sa aflam dimensiune totala a fisierului fara sa luam fiecare fisier pe care il contine in parte, iar \"b\" ne va afisa totul in bytes, fisierul pentru care dorim sa calculam este fisierul cu numele archive\n",
+    "\n",
+    "- rezultatul de la comanda du este transmis ca input la urmatoarea comanda \"awk\", care este un tool de manipulat textul in linux, \"print\" ne indica faptul ca vrem sa afisam iar '$1' afiseaza prima coloana a liniei curente, astfel aceasta comanda va afisa prima coloana din rezultatul anterior adica rezultatul calculat in bytes\n",
+    "\n",
+    "-  \"pv\" este o comanda folosita pentru a vedea progresul datelor iar optiunea \"-s\" spune ca urmeaza sa fie transmisa o valoare, astfel \"$\" atribuie valorea comenzii dintre parantezele rotunde unei variabile pentru a putea fi folosita de catre comanda menionata anterior\n",
+    "\n",
+    "- pana aici se creaza o arhiva si se si se afiseaza progresul acesteia de a crea o arhiva de tip tar\n",
+    "\n",
+    "- astfel progresul este transmis comenzii \"gzip\" care va comprima datele transmise si le va scrie in fisierul lab3.tar.gz\n",
+    "\n",
+    "- in final se creaza un fisier comprimat ce contine prima arhiva facuta de tip tar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -141,7 +160,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -164,7 +182,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -172,7 +189,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -180,7 +196,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -188,7 +203,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -196,7 +210,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -204,15 +217,22 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.6.8"
-  },
-  "orig_nbformat": 4
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
