--- a/lab/notebooks/Containers.ipynb
+++ b/lab/notebooks/Containers.ipynb
@@ -828,6 +828,34 @@
    "id": "4e234b18",
    "metadata": {},
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "28ad2928",
+   "metadata": {},
+   "source": [
+    "Homework:\n",
+    "\n",
+    "I have tried 2 different approaches:\n",
+    "\n",
+    "1. sudo docker run -d -p 8081:80 -v /home/selena/4PSA/Linux-Podman-basics/lab/playground/containers/images/image.png:/usr/share/nginx/html/images/image.png nginx-static\n",
+    "\n",
+    "    This command starts the container using the nginx-static image. It will run in detached mode(background), mapping the 8081 port on the host to port 80 inside the container. The image.png will be mounted inside the container, letting NGINX server to serve it when accessed.\n",
+    "\n",
+    "    Mounting links a file from host machine to a location inside the container. It's advantage is that any changes made of the file inside the host will be reflected in the container aswell. It can be useful in certain scenarios, but in our assignment i don't think that it is suitable because the changes are not permament. If we rerun the container without mounting, the modifications will be lost.\n",
+    "\n",
+    "2. ADD images /usr/share/nginx/html/images\n",
+    "    \n",
+    "    This method is used to copy the images directory inside the docker image itself. In this case the image has to be built again using docker build -t nginx-static:latest . The image now does not rely on external dependencies. The changes are permanent in the sense that if we stop this container and then we start it again, the image will be displayed.\n",
+    "  \n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
