--- a/lab/notebooks/Linux.ipynb
+++ b/lab/notebooks/Linux.ipynb
@@ -137,6 +137,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- tar cf - archive -P : tar command creates an archive by concatenating all the specified files. The c option is for creating the archive, while f is used in order to specify the name of the resulting file. In this case -, a dash, is used instead of a file name so that the output is sent to stdout. 'archive' is the target directory. The -P option is short for --absolute-names, which preserves the leading '/'s from file names. No options to compress the data are used at this point.\n",
+    "\n",
+    "- pv -s $(du -sb archive | awk '{print $1}') : pv shows the progress of data flowing through the pipeline. It passes to stdout whatever it receives at stdin. Using -s SIZE we assume that the amount of data flowing through the pipeline has SIZE bytes, and this value is used in order to compute percentages and ETAs. 'du -sb archive' returns the disk usage information for the 'archive' directory. The -s option makes it return a summary containing only the total disk usage of all files in the directory and the b modifiers sets the unit to bytes. This comand returns a string that looks like 'SIZE    archive'. AWK is a scripting language for text processing. The \"awk '{print $1}'\" command prints only the first section of the data received, which in this case is the SIZE of all files in 'archive' directory.\n",
+    "\n",
+    "- gzip > lab3.tar.gz : gzip compresses the data received from the pipe. The '>' symbol redirects the output of gzip to the lab3.tar.gz file.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What type of file is `lab3.tar.gz`? What's the difference from `lab3.zip`?"
    ]
   },
